Clear MediaStreamManager's request list during IO-thread shutdown.

Previously there was a DCHECK expecting the request list to be empty,
which is causing some tests to flake.

Bug: 778869
Change-Id: I53276aded82752a5a7f01a58e610950e59d062db
Reviewed-on: https://chromium-review.googlesource.com/746663
Reviewed-by: Tommi <tommi@chromium.org>
Commit-Queue: Guido Urdaneta <guidou@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512843}
Former-commit-id: 0fda7c113a86197fd958689b382884f7d59496ca